--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/table.jpg');
+    background-image: url('../images/table.jpeg');
     background-size: cover;
     display: flex;
     justify-content: center;
